[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "pytestmonkey"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^5.4"
python = "^3.7"
requests = "^2.23"
[tool.poetry.dev-dependencies]
